--- a/git-folder.yml
+++ b/git-folder.yml
@@ -1,28 +1,10 @@
---- 
 id: git-folder
 info: 
   author: M
   name: "Git Folder Exposure"
   severity: medium
 requests: 
-  - 
-    matchers: 
-      - 
-        status: 
-          - 200
-        type: status
-      - 
-        part: body
-        type: word
-        words: 
-          - root
-          - commint
-          - git
-          - COMMIT_EDITMSG
-          - pack-refs
-          - gitignore
-    matchers-condition: and
-    method: GET
+  - method: GET
     path: 
       - "{{BaseURL}}/.git/branches/"
       - "{{BaseURL}}/.git/COMMIT_EDITMSG"
@@ -80,3 +62,17 @@ requests:
       - "{{BaseURL}}/.git/refs/wip/index/refs/heads/master"
       - "{{BaseURL}}/.git/refs/wip/wtree/refs/heads/main"
       - "{{BaseURL}}/.git/refs/wip/wtree/refs/heads/master"
+    matchers-condition: and
+    matchers: 
+      - status: 
+          - 200
+        type: status
+      - part: body
+        type: word
+        words: 
+          - root
+          - commint
+          - git
+          - COMMIT_EDITMSG
+          - pack-refs
+          - gitignore
